fis bug alignment

--- a/src/style/Project.css
+++ b/src/style/Project.css
@@ -1,6 +1,9 @@
 
 .projects section{
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   /* scroll-snap-align: center; */
 }
 .portfolio {
@@ -22,12 +25,12 @@
   background-color: white;
 }
 .portfolio  .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .portfolio  .container  .wrapper {
   max-width: 1366px;
@@ -89,7 +92,7 @@
       font-size: 24px;
   }
   .projects section{
-    height: 120vh;
+    height: 110vh;
   }
   .portfolio .container .wrapper{
     flex-direction: column;
